package nivel2_sql_persistance;

import nivel2_sql_persistance.menu.MainMenu;

public class Main {

    public static void main(String[] args) {
        MainMenu app = new MainMenu();
        app.start();
    }
}